Scrollbar css and bug fix for room change.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,23 @@ html, body {
 * {
   font-family: Roboto,"Helvetica Neue",sans-serif;
 }
+
+.scroll {
+  scrollbar-color: gray;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 20px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: #ddd;
+  border-radius: 20px;
+}
